@@ -1,5 +1,10 @@
 2007-09-11  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: Added some more
+	  error handling code, I hope to track down 82715 with it.
+
+2007-09-11  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: Added some error
 	  handling code to make it easier to track refactoring bugs.
 
